testData/inspections/MissingPackageInspection/MissingFoobarPackage.R
# require(foobar)
require(<error descr="'foobar' is not yet installed">foobar</error>)
